--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,5 +4,6 @@
 @import "{{ site.theme }}";
 
 .main-content p {
-  direction: rtl;  /* Right to Left */
+  /*direction: rtl;  /* Right to Left */
+  text-align: right;
 }
