--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,12 @@
 ---
 ---
-
+direction: rtl;
+/*
 @import "{{ site.theme }}";
 
 .main-content p {
   direction: rtl;  /* Right to Left */
   /*text-align: right;*/
 }
+*/
+
