--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,5 +8,10 @@
   /*text-align: right;*/
 }
 
+.h2 {
+  direction: rtl;  /* Right to Left */
+  /*text-align: right;*/
+}
+
 /* direction: rtl;*/
 
