--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
   /*text-align: right;*/
 }
 
-.main-content h2 {
+.main-content h2 h3 {
   direction: rtl;  /* Right to Left */
   /*text-align: right;*/
 }
