--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,11 @@
   direction: rtl;  /* Right to Left */
   /*text-align: right;*/
 }
+.main-content ul {
+  direction: rtl;  /* Right to Left */
+}
 
-/* direction: rtl;*/
+.main-content li {
+  direction: rtl;  /* Right to Left */
+}
 
