--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,9 +19,11 @@
 }
 .main-content ul {
   direction: rtl;  /* Right to Left */
+  margin-right:20px;
 }
 
 .main-content li {
   direction: rtl;  /* Right to Left */
+  margin-right:20px;
 }
 
