--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,10 +20,12 @@
 .main-content ul {
   direction: rtl;  /* Right to Left */
   margin-right: 20 px;
+  text-align: right;
 }
 
 .main-content li {
   direction: rtl;  /* Right to Left */
   margin-right: 20 px;
+  text-align: right;
 }
 
