--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,10 @@
   direction: rtl;  /* Right to Left */
   /*text-align: right;*/
 }
+.main-content p {
+  direction: ltr;  /* Right to Left */
+  /*text-align: right;*/
+}
 
 .main-content h2 {
   direction: rtl;  /* Right to Left */
