--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@
   direction: rtl;  /* Right to Left */
   /*text-align: right;*/
 }
-.main-content p {
+.main-content code {
   direction: ltr;  /* Right to Left */
   /*text-align: right;*/
 }
