--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@
 }
 .main-content code {
   direction: ltr;  /* Right to Left */
-  /*text-align: right;*/
+  text-align: left;
 }
 
 .main-content h2 {
