--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,7 +33,8 @@
   text-align: right;
 }
 
-.main-content pre{
-    direction: ltr;  /* Right to Left */
+.main-content pre.highlight{
+    text-align: left;
+  
 }
 
