--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,6 +41,10 @@
     text-align: left;
   
 }
+.main-content td.dcterms:description{
+    width: 400 px;
+  
+}
 /*.main-content td{
     width: 280 px;
   
