--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,6 +41,10 @@
     text-align: left;
   
 }
+.main-content pre.highlight.c1{
+    color: #345678;
+  
+}
 .main-content td.dcterms:description{
     width: 400 px;
   
