--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,7 +45,7 @@
     color: #345678;
   
 }
-.main-content td.dcterms:description{
+.main-content .main-content table td{
     width: 800 px;
   
 }
